c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/static_initializer_too_long.c
struct pair {
    int a;
    int b;
};
// a static compound structure initializer can't initialize more values than the
// struct has
struct pair p = {1, 2, 3};